chore(backend): refine CallGlobalInsnGen and update test fixtures
- Add CallGlobalInsnGen instruction generator to insn package
- Update CBodyBuilder with utility function support imports
- Refine test cases in CBodyBuilderPhaseBTest and PhaseCTest
- Update backend documentation